committing finished project

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div id="header" class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,8 +24,8 @@
             </ul>
         </div>
     </div>
-    <div class="background-image" alt="People conducting business at a table"></div>
-    <div class="offered-services">
+    <div id="background image" div class="background-image" alt="People conducting business at a table"></div>
+    <div id="offered services" class="offered-services">
         <div class="offered-features">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="business tools on a table" />
             <h2>Search Engine Optimization</h2>
@@ -48,7 +48,7 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
+    <div id="benefits offered" div class="benefits">
         <div class="benefit-child">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gears leading to money." />
